--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix . --ext .js,.jsx",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
