--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0",
     "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -20,6 +20,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "json-server": "^0.17.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
@@ -55,5 +58,8 @@
   },
   "volta": {
     "node": "16.16.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix"
   }
 }
